PVWEB-1009 |fix| fix working on mobile

--- a/components/organisms/Header/partials/MainNavigationLevel/styles/MainNavLinkSecondary.scss
+++ b/components/organisms/Header/partials/MainNavigationLevel/styles/MainNavLinkSecondary.scss
@@ -72,7 +72,7 @@
     @apply tw-flex-col;
     @apply tw-w-1/2;
     @apply tw-pl-8 tw-pt-4;
-    padding-bottom: 88px;
+    @apply tw-pb-[88px];
 
     &__element {
       @apply tw-border-b-0;
